mdmCeneveo/src/objects/Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_ID__c</fullName>
        <label>Corporate_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Order_Date__c</fullName>
        <label>First Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Party_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Party_Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Account_Number__c</fullName>
        <label>National Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Relationship_Type__c</fullName>
        <label>Party_Relationship_Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Valid_From_Date__c</fullName>
        <label>Party Valid From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Party_Valid_To_Date__c</fullName>
        <label>Party Valid To  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party</label>
        <referenceTo>Party__c</referenceTo>
        <relationshipLabel>Relationship s</relationshipLabel>
        <relationshipName>Relationship_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Possesses_Tax_Exemption_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possesses Tax Exemption Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provides_Non_Taxable_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provides Non Taxable Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesperson_ID__c</fullName>
        <label>Salesperson_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Relationship</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Relationship  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>